# costmap_layers

simple_nav/: CMakeLists.txt  costmap_plugins.xml  package.xml
simple_nav/bags/: 2014-07-24_14-57-13_path_data.bag  example.bag  example_path_1.bag
simple_nav/bags/paths/: 2014-07-24_14-53-24_path_data.bag  2014-08-01_17-11-43_path_data.bag  2014-08-08_16-12-48_path_data.bag  2014-08-13_12-18-14_path_data.bag  2014-08-13_12-23-34_path_data.bag  2014-08-13_12-31-06_path_data.bag  2014-08-13_13-15-57_path_data.bag  2014-08-13_13-24-35_path_data.bag  2014-08-13_14-12-20_path_data.bag  2014-08-13_14-12-56_path_data.bag  2014-08-13_14-14-35_path_data.bag  crazy.bag  decent.bag
simple_nav/launch/: .nfs000000000184012c0000007c  .nfs0000000001841f3c000001f2  base_local_planner_params.yaml  costmap_common_params.yaml  drive_robot.launch  global_costmap_params.yaml  local_costmap_params.yaml  navigation.launch  plugins.yaml  simulator.launch  teleop_joy.launch
simple_nav/map/: cave_map.yaml  simple_map.yaml
simple_nav/msg/: RealGrid.msg
simple_nav/src/: useless.cpp
simple_nav/src/breadcrumb_layer/: breadcrumb_layer.cpp  breadcrumb_layer.h
simple_nav/src/grid_layer/: grid_layer.cpp  grid_layer.h
simple_nav/src/learned_layer/: learned_layer.cpp  learned_layer.h
simple_nav/src/learning/: analyze_path.py  costmap.txt  path_collect.py  path_collect_client.py  pc2_to_numpy.py  people_paths.py  workfile
simple_nav/src/simple_layer/: simple_layer.cpp  simple_layer.h
simple_nav/src/tracking_layer/: tracking_layer.cpp  tracking_layer.h
simple_nav/srv/: ChangeState.srv
simple_nav/world/: cave.world  simple.pgm  simple.world  simple.world~  uoa_robotics_lab.world
